--- a/src/app/components/pensamentos/criar-pensamentos/criar-pensamentos.component.html
+++ b/src/app/components/pensamentos/criar-pensamentos/criar-pensamentos.component.html
@@ -1,103 +1,109 @@
 <section class="container criar-pensamentos ff-inter">
-  <header>
-    <h2 class="header">Adicionar Titulo</h2>
+  <header class="header">
+    <h2>Adicione um <br />pensamento novo:</h2>
   </header>
   <form>
-    <label for="pensamento">pensamento</label>
+    <label for="pensamento">Pensamento</label>
     <input
       type="textarea"
       class="input"
       id="pensamento"
       name="pensamento"
-      placeholder="Digite seus pensamentos"
-      [value]="pensamento.conteudo"
+      placeholder="Digite o pensamento"
+      [(ngModel)]="pensamento.conteudo"
     />
-    <label for="autoria">autoria</label>
+    <label for="autoria">Autoria ou fonte</label>
     <input
-      type="textarea"
+      type="text"
       class="input"
       id="autoria"
       name="autoria"
-      placeholder="Digite seus autoria"
-      [value]="pensamento.autoria"
+      placeholder="Digite a autoria ou fonte"
+      [(ngModel)]="pensamento.autoria"
     />
-    <label for="modelo">
-      <div class="container-radio">
-        <div class="redio-modelo">
-          <label for="modelo1">
-            <div class="custom-radio">
-              <input type="radio" id="1" value="modelo1" name="modelo-card" />
+    <label for="modelo">Selecione o modelo do card:</label>
+    <div class="container-radio">
+      <div class="radio-modelo">
+        <label for="modelo1">
+          <input
+            type="radio"
+            id="modelo1"
+            value="modelo1"
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
+          />
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 1</span>
+        </label>
+        Prévia:
+        <div class="modelo modelo1 ff-roboto-mono">
+          <img src="../../../../assets/Imagens/modelo1.png" alt="Aspas azuis" />
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria">
+            <b>{{ pensamento.autoria }}</b>
+          </p>
+        </div>
+      </div>
 
-              <span></span>
-            </div>
-            <span>Modelo 1</span>
-          </label>
-          Previa:
-          <div class="modelo modelo1 ff-roboto-mono">
-            <img
-              src="../../../../assets/imagens/modelo1.png"
-              alt="aspas azuls"
-            />
-            <p class="conteudo">{{ pensamento.conteudo }}</p>
-            <p class="autoria">
-              <b>{{ pensamento.autoria }}</b>
-            </p>
+      <div class="radio-modelo">
+        <label for="modelo2">
+          <input
+            type="radio"
+            id="modelo2"
+            value="modelo2"
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
+          />
+          <div class="custom-radio">
+            <span></span>
           </div>
+          <span>Modelo 2</span>
+        </label>
+        Prévia:
+        <div class="modelo modelo2 ff-roboto-mono">
+          <img
+            src="../../../../assets/Imagens/modelo2.png"
+            alt="Aspas azul claro"
+          />
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria">
+            <b>{{ pensamento.autoria }}</b>
+          </p>
         </div>
       </div>
-    </label>
-    <label for="modelo">
-      <div class="container-radio">
-        <div class="redio-modelo">
-          <label for="modelo2">
-            <div class="custom-radio">
-              <input type="radio" id="1" value="modelo2" name="modelo-card" />
 
-              <span></span>
-            </div>
-            <span>Modelo 1</span>
-          </label>
-          Previa:
-          <div class="modelo modelo2 ff-roboto-mono">
-            <img
-              src="../../../../assets/imagens/modelo2.png"
-              alt="aspas azuls"
-            />
-            <p class="conteudo">{{ pensamento.autoria }}</p>
-            <p class="autoria">
-              <b>autoria de </b>
-            </p>
+      <div class="radio-modelo">
+        <label for="modelo3">
+          <input
+            type="radio"
+            id="modelo3"
+            value="modelo3"
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
+          />
+          <div class="custom-radio">
+            <span></span>
           </div>
+          <span>Modelo 3</span>
+        </label>
+        Prévia:
+        <div class="modelo modelo3 ff-roboto-mono">
+          <img
+            src="../../../../assets/Imagens/modelo3.png"
+            alt="Aspas verdes"
+          />
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria">
+            <b>{{ pensamento.autoria }}</b>
+          </p>
         </div>
       </div>
-    </label>
-    <label for="modelo">
-      <div class="container-radio">
-        <div class="redio-modelo">
-          <label for="modelo3">
-            <div class="custom-radio">
-              <input type="radio" id="3" value="modelo3" name="modelo-card" />
-              <span></span>
-            </div>
-            <span>Modelo 1</span>
-          </label>
-          Previa:
-          <div class="modelo modelo3 ff-roboto-mono">
-            <img
-              src="../../../../assets/imagens/modelo3.png"
-              alt="aspas azuls"
-            />
-            <p class="conteudo">contaudo</p>
-            <p class="autoria">
-              <b>autoria de </b>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="acoes">
-        <button class="botao">Salvar</button>
-        <button class="botao">Cancelar</button>
-      </div>
-    </label>
+    </div>
+    <div class="acoes">
+      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button (click)="cancelar()" class="botao">Cancelar</button>
+    </div>
   </form>
 </section>
