--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-cabecalho></app-cabecalho>
 <main>
-  <app-criar-pensamentos></app-criar-pensamentos>
+  <router-outlet></router-outlet>
+
+  <!-- <app-criar-pensamentos></app-criar-pensamentos>
+  <app-listar-pensamentos></app-listar-pensamentos> -->
 </main>
 <app-rodape></app-rodape>
-
